<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="attractions_imageview">Attractions ImageView</string>
    <string name="attraction">Attractions</string>
    <string name="restaurants">Restaurants</string>
    <string name="coffee_shops">Coffee Shops</string>
    <string name="hotels">Hotels</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="discover_cairo">Discover Cairo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_attractions">AttractionsActivity</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pyramids_of_giza">Pyramids of Giza</string>
    <string name="the_egyptian_museum">The Egyptian Museum</string>
    <string name="al_azhar">Al-Azhar Mosque</string>
    <string name="khan_el_khalili">Khan el-Khalili</string>
    <string name="mohamed_ali_mosque">Mohamed Ali Citadel</string>
    <string name="museum_of_islamic_art">Museum of Islamic Art</string>
    <string name="manial_palace">Manial Palace</string>
    <string name="cairo_tower">Cairo Tower</string>
    <string name="the_qalawun_complex">The Qalawun complex</string>
    <string name="baron_palace">Baron\'s Palace</string>
    <string name="koshary_abou_tarek">Koshary Abou Tarek</string>
    <string name="gad">Gad</string>
    <string name="sobhy_kaber">Sobhy Kaber</string>
    <string name="farahat">Farahat</string>
    <string name="felfela">felfela</string>
    <string name="el_shabrawy">El Shabrawy</string>
    <string name="kebdet_el_prince">Kebdet El-Prince</string>
    <string name="om_hasssan">Om Hassan</string>
    <string name="el_feshawy">El-Fishawy</string>
    <string name="groppi">Groppi</string>
    <string name="naguib_mahfouz_cafe">Naguib Mahfouz Cafe</string>
    <string name="left_bank">Left Bank</string>
    <string name="cake_cafe">Cake Cafe</string>
    <string name="kafein_cafe">Kafein Cafe</string>
    <string name="mena_house">Mena House</string>
    <string name="the_nile_ritz">The Nile Ritz</string>
    <string name="hilton">Hilton</string>
    <string name="conrad">Conrad</string>
    <string name="four_seasons">Four Seasons</string>
    <string name="sofitel_hotel">Sofitel Hotel</string>
    <string name="place_image">Place Image</string>
    <string name="info">Info</string>
    <string name="location">location</string>
    <string name="pyramids_info">The Great Pyramid of Giza is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</string>
    <string name="egyptian_museum_info">The Museum of Egyptian Antiquities, known commonly as the Egyptian Museum or Museum of Cairo, in Cairo, Egypt, is home to an extensive collection of ancient Egyptian antiquities.</string>
    <string name="azhar_info">Al-Azhar Mosque is an Egyptian mosque in Islamic Cairo. Al-Mu\'izz li-Din Allah of the Fatimid dynasty commissioned its construction for the newly established capital city in 970.</string>
    <string name="khan_el_khalili_info">Khan el-Khalili is a major souk in the historic center of Islamic Cairo. The bazaar district is one of Cairo\'s main attractions for tourists and Egyptians alike.</string>
    <string name="mohamed_ali_mosque_info">The Great Mosque of Muhammad Ali Pasha or Alabaster Mosque is a mosque situated in the Citadel of Cairo in Egypt and commissioned by Muhammad Ali Pasha between 1830 and 1848.</string>
    <string name="museum_of_islamic_art_info">The Museum of Islamic Art, in Cairo, Egypt, is considered one of the greatest in the world, with its exceptional collection of rare woodwork and plaster artefacts, as well as metal, ceramic, glass, …</string>
    <string name="manial_palace_info">The Manial Palace and Museum, is a former Ottoman dynasty era palace and grounds on Rhoda Island on the Nile. It is located in the Sharia Al-Saray area in the El-Manial district of southern Cairo, Egypt.</string>
    <string name="cairo_tower_info">The Cairo Tower is a free-standing concrete tower located in Cairo, Egypt. At 187 m, it has been the tallest structure in Egypt and North Africa for about 50 years.</string>
    <string name="the_qalawun_complex_info">The Qalawun complex is a massive complex in Cairo, Egypt that includes a madrasa, a hospital and a mausoleum. It was built by the Sultan Al-Nasir Muhammad Ibn Qalawun in the 1280s; some thirty surviving mosques were built during his time.</string>
    <string name="baron_palace_info">The Baron Empain Palace, better known as Le Palais Hindou, is a distinctive and historic Indian-inspired mansion in Heliopolis, a suburb northeast of central Cairo, Egypt.</string>
    <string name="pyramids_address">Al Haram, Nazlet El-Semman, Al Haram, Giza Governorate</string>
    <string name="the_egyptian_museum_address">15 Meret Basha, Ismailia, Qasr an Nile, Cairo Governorate</string>
    <string name="azhar_address">El-Darb El-Ahmar, Cairo Governorate</string>
    <string name="khan_el_khalili_address">El-Gamaleya, Qism El-Gamaleya, Cairo Governorate</string>
    <string name="mohamed_ali_mosque_address">Al Abageyah, Qism El-Khalifa, Cairo Governorate</string>
    <string name="museum_of_islamic_art_address">Shar\'a Bur Bab El Khalk Square</string>
    <string name="manial_palace_address">1 Al Saraya, Al Manial, Cairo Governorate</string>
    <string name="cairo_tower_address">Zamalek, Cairo Governorate</string>
    <string name="the_qalawun_complex_address">El-Gamaleya, Qism El-Gamaleya, Cairo Governorate</string>
    <string name="baron_palace_address">El-Orouba, El-Montaza, Heliopolis, Cairo Governorate</string>
    <string name="koshary_abou_tarel_address">Champollion Rd, Marouf, Qasr an Nile, Cairo Governorate</string>
    <string name="koshary_abou_tarek_info"><b><i>Hours: </i></b>6:30AM to 11PM</string>
    <string name="koshary_abou_tarek_phone"><b><i>Phone: </i></b>16760</string>
    <string name="gad_info"><b><i>Hours: </i></b>9AM to 11PM</string>
    <string name="gad_phone"><b><i>Phone: </i></b>16475</string>
    <string name="gad_address">26 July St, Al Fawalah, Abdeen, Cairo Governorate</string>
    <string name="sobhy_kaber_address">Ebeid, As Sahel, Cairo Governorate</string>
    <string name="sobhy_kaber_info"><b><i>Hours: </i></b>2PM to 4AM</string>
    <string name="sobhy_kaber_phone"><b><i>Phone: </i></b>16640</string>
    <string name="farahat_address">122 Al Azhar, El-Gamaleya, Qism El-Gamaleya, Cairo Governorate</string>
    <string name="farahat_info"><b><i>Hours:</i></b>12:05PM to 4AM</string>
    <string name="farahata_phone"><b><i>Phone: </i></b>02 25926595</string>
    <string name="felfela_address">15, Hoda Shaarawy Street off، Talaat Harb, Downtown، Cairo Governorate</string>
    <string name="felfela_info"><b><i>Hours: </i></b>8AM to 12AM</string>
    <string name="felfela_phone"><b><i>Phone: </i></b>02 23955557</string>
    <string name="el_shabrawy_address">Al Mabyadah, Rawd Al Farag, Cairo Governorate</string>
    <string name="el_shabrawy_info"><b><i>Hours: </i></b>8AM to 1:30AM</string>
    <string name="el_shabrawy_phone"><b><i>Phone: </i></b>16842</string>
    <string name="kebdet_el_prince_address">79 Talaat Harb, Madinet Al Ommal, Imbaba, Giza Governorate</string>
    <string name="kebdet_el_prince_info"><b><i>Hours: </i></b>2PM to 5AM</string>
    <string name="kebdet_el_prince_phone"><b><i>Phone: </i></b>19137</string>
    <string name="om_hassan_address">46 Abbas El-Akkad, Al Manteqah Al Oula, Nasr City, Cairo Governorate</string>
    <string name="om_hassan_info"><b><i>Hours: </i></b>12PM to 3AM</string>
    <string name="om_hassan_phone"><b><i>Phone: </i></b>19500</string>
    <string name="el_feshawy_address">El-Fishawi; El-Fishawi Alley; Khan al-Khalili, Cairo</string>
    <string name="el_feshawy_info"><b><i>Hours: </i></b>open 24 hours</string>
    <string name="el_feshawy_phone"><b><i>Phone: </i></b>0102 749 9420</string>
    <string name="groppi_address">Down town, Qasr an Nile, Cairo Governorate</string>
    <string name="groppi_info"><b><i>Hours: </i></b>8AM to 12AM</string>
    <string name="groppi_phone"><b><i>Phone: </i></b>02 23911871</string>
    <string name="naguib_mahfouz_cafe_address">Al Gamaleyah, Qesm Gamaleyah, Cairo Governorate</string>
    <string name="naguib_mahfouz_cafe_info"><b><i>Hours: </i></b>10AM to 1AM</string>
    <string name="naguib_mahfouz_cafe_phone"><b><i>Phone: </i></b>02 25903788</string>
    <string name="left_bank_address">53 End Abou El Feda, Zamalek, Cairo, 11211</string>
    <string name="left_bank_info"><b><i>Hours: </i></b>8AM to 11:30PM</string>
    <string name="left_bank_phone"><b><i>Phone: </i></b>02 27350014</string>
    <string name="cake_cafe_address">Al Sheikh Al Marsafi, Omar Al Khayam, Zamalek, Giza Governorate</string>
    <string name="cake_cafe_info"><b><i>Hours: </i></b>8AM to 11PM</string>
    <string name="cake_cafe_phone"><b><i>Phone: </i></b>0102 350 5014</string>
    <string name="kafein_cafe_address">28 Haret Wesst Al Balad, Sherif, Downtown, Cairo Governorate 11121</string>
    <string name="kafein_cafe_info"><b><i>Hours: </i></b>9AM to 1AM</string>
    <string name="kafein_cafe_phone"><b><i>Phone: </i></b>0106 413 8200</string>
    <string name="mena_house_info">In a stone palace on 16 hectares of gardens, this upscale hotel offering views of the Giza pyramid complex is 41 km from Cairo International Airport. Polished rooms offer Wi-Fi, flat-screens and minibars, plus sitting areas. Some have pyramid views. Suites add living areas, and tea and coffeemakers. Upgraded suites come with separate living rooms and terraces, and some feature antique decor and Persian rugs. Room service is provided 24/7. Kids age 11 and under stay at no charge with an adult. There are 4 restaurants and 2 lounges, some with ornate decor and/or pyramid views. There\'s an 18-hole golf course, an outdoor pool and a gym, plus a spa.</string>
    <string name="mena_house_phone"><b><i>Phone: </i></b>02 33773222</string>
    <string name="mena_house_address">Kafr Nassar, Al Haram, Giza Governorate</string>
    <string name="the_nile_ritz_address">1113 Corniche El Nil, Cairo, Cairo Governorate 11221</string>
    <string name="the_nile_ritz_info">Opposite the Nile River, this upscale hotel is 1 km from the Egyptian Museum of Antiquities and the Cairo Opera House. The elegant rooms with fine linens and marble bathrooms also feature balconies with city or river views, plus flat-screen TVs, coffeemakers and minibars. Suites add separate sitting areas; some have formal dining rooms and access to a private lounge with free breakfast. Room service and Wi-Fi are available. There are 4 restaurants, 3 bars, 2 lounges and a pastry shop. Other amenities include a spa, a fitness center, a kids\' club and an outdoor pool.</string>
    <string name="the_nile_ritz_phone"><b><i>Phone: </i></b>02 25778899</string>
    <string name="hilton_address">1115 Nile Corniche, Sharkas, Cairo, Cairo Governorate 12344</string>
    <string name="hilton_info">In a high-rise tower overlooking the River Nile, this upscale hotel is a 10-minute walk from the Egyptian Museum. It\'s also a 12-minute walk from Tahrir Square. With classic decor and city views, the relaxed rooms offer balconies. They also have minibars, TVs and free Internet access. Upgraded rooms add Nile views and pull-out couches, while club-level rooms add lounge access. Suites offer sitting areas and/or kitchenettes. Room service is available. There are 4 restaurants, including 1 with panoramic city views. There\'s also a pub and a cafe. Other amenities include a gym, an outdoor pool and a casino.</string>
</resources>