<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_attractions"
            android:icon="@drawable/pyramids"
            android:title="@string/attraction" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/restaurant"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_coffee_shops"
            android:icon="@drawable/coffee"
            android:title="@string/coffee_shops" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/hotel_icon"
            android:title="@string/hotels" />
    </group>

</menu>
